--- a/forallx-adl-backmatter.tex
+++ b/forallx-adl-backmatter.tex
@@ -7,7 +7,7 @@
 \subsubsection*{Acknowledgements}
 \addtocontents{toc}{\vspace{\normalbaselineskip}}
 \addcontentsline{toc}{chapter}{Acknowledgements, etc.}
-Antony Eagle would like to thank P.D.\ Magnus and Tim Button for their work from which this text derives, and those acknowledged below who helped them. He also wishes to thank Atheer Al-Khalfa, Caitlin Bettess, Andrew Carter, Keith Dear, Jack Garland, Bowen Jiang, Millie Lewis, Yaoying Li, Jon Opie, Matt Nestor, Jaime von Schwarzburg, and Mike Walmer for comments on successive versions of the Adelaide text.  \medskip
+Antony Eagle would like to thank P.D.\ Magnus and Tim Button for their work from which this text derives, and those acknowledged below who helped them. Thanks also to Atheer Al-Khalfa, Caitlin Bettess, Andrew Carter, Keith Dear, Jack Garland, Bowen Jiang, Millie Lewis, Yaoying Li, Jon Opie, Matt Nestor, Jaime von Schwarzburg, and Mike Walmer for comments on successive versions of the Adelaide text.\medskip
 
 Tim Button would like to thank P.D.\ Magnus for his extraordinary act of generosity, in making \forallx\ available to everyone. Thanks also to Alfredo Manfredini Böhm, Sam Brain, Felicity Davies, Emily Dyson, Phoebe Hill, Richard Jennings, Justin Niven,  and Igor Stojanovic for noticing errata in earlier versions. \medskip
 
