--- a/forallx-adl-interpretations.tex
+++ b/forallx-adl-interpretations.tex
@@ -1399,7 +1399,7 @@ Show that the following pairs of sentences are logically equivalent.
 \item $\exists x (Jx \eand x=m)$, $Jm$;
 \item $\forall x \forall y (x=y \eand Rxy)$, $\exists x (Rxx \eand \forall y (x=y)$;
 \item $(\exists x Px \eand Qc)$, $\exists x (Px \eand Qc)$;
-\item $\forall x\forall y Rxy$, $\forall x\forall y Rxy$;
+\item $\forall x\forall y Rxy$, $\forall y\forall x Rxy$;
 \item $\forall x (Px \eif \exists y Rxy)$, $\enot\exists x(\forall y \enot Rxy \eand Px)$.
 \end{earg}
 
